changelog: added e-commerce vendor

--- a/EcommerceTest/app/src/main/res/values/strings.xml
+++ b/EcommerceTest/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E-commerceTest</string>
+    <string name="app_name">E-commerce Customer</string>
     <string name="login">Login</string>
     <string name="login_2">Experience the all new App!</string>
     <string name="email_id">E-mail ID</string>
